# Vase2d

./: .gitignore  .gitmodules  CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Sources/: GameWindow.cpp  GameWindow.h  main.cpp
Sources/Core/: Common.h  Logging.h  Mathematics.h
Sources/Input/: Input.h
Sources/Platform/: GladLoader.h  RenderAPI.h  SDLClass.cpp  SDLClass.h
Sources/Renderer/: BatchRenderer.cpp  BatchRenderer.h  Buffers.h  Shader.h  SpriteRenderer.h
Sources/Renderer/Buffers/: IndexBuffer.h  VertexArray.h  VertexBuffer.h
Sources/Renderer/Camera/: OrthographicCamera.cpp  OrthographicCamera.h
